Added missing type tags in the manifest

--- a/manifest.json
+++ b/manifest.json
@@ -11,12 +11,14 @@
       {
          "src": "icons/logo-512.png",
          "sizes": "512x512",
-         "": "image/png"
+         "type": "image/png",
+         "purpose": "maskable"
       },
       {
          "src": "icons/logo-192.png",
          "sizes": "192x192",
-         "": "image/png"
+         "type": "image/png",
+         "purpose": "maskable"
       }
    ]
 }
